[gd_scene load_steps=12 format=3 uid="uid://c4nce4mpsr7k6"]

[ext_resource type="Script" uid="uid://dhjyhs7sxousu" path="res://scenes/biking/scr_mail_kiosk_menu.gd" id="1_0a2qn"]
[ext_resource type="Texture2D" uid="uid://bj0rqyhomlrjn" path="res://sprites/characters/portraits/spr_front_mail_man.png" id="2_5be7v"]
[ext_resource type="Texture2D" uid="uid://dk7grnw6404li" path="res://sprites/biking/background/spr_mail_man_table.png" id="2_8in00"]
[ext_resource type="Script" uid="uid://dwqmbejm2fknv" path="res://code/scr_dialogue_box.gd" id="2_85fyn"]
[ext_resource type="Texture2D" uid="uid://dnllcdqtg4q84" path="res://sprites/items/spr_item_bike_helmet.png" id="3_e0yq6"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="5_8wxff"]
[ext_resource type="Script" uid="uid://dmjhn5qrpt7r4" path="res://code/scr_textbox.gd" id="6_bw1u3"]
[ext_resource type="Script" uid="uid://cmin2i5j7iysd" path="res://scenes/tech/scr_reference_button.gd" id="8_cw2k1"]
[ext_resource type="Texture2D" uid="uid://bm4rwxl0motml" path="res://sprites/characters/portraits/spr_portrait_mail_man.png" id="9_f427b"]
[ext_resource type="Texture2D" uid="uid://da2os5pe7n7xn" path="res://sprites/gui/spr_gui.png" id="9_qnob4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3s8v"]
bg_color = Color(0, 0, 0, 1)

[node name="MailKioskMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0a2qn")

[node name="BackgroundPanel" type="Panel" parent="."]
clip_children = 2
layout_mode = 0
offset_left = 7.0
offset_right = 153.0
offset_bottom = 116.0

[node name="MailManPicture2" type="Sprite2D" parent="BackgroundPanel"]
position = Vector2(54, 76)
texture = ExtResource("2_8in00")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 90, 29)

[node name="MailManPicture" type="Sprite2D" parent="BackgroundPanel"]
position = Vector2(64, 1)
texture = ExtResource("2_5be7v")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 80, 87)

[node name="MailManFace" type="Sprite2D" parent="BackgroundPanel"]
visible = false
position = Vector2(82, 1)
texture = ExtResource("2_5be7v")
centered = false
region_enabled = true
region_rect = Rect2(80, 0, 32, 32)

[node name="DialogueBox" type="Node2D" parent="."]
z_index = 11
position = Vector2(1, 89)
script = ExtResource("2_85fyn")
dont_close = true

[node name="DialogueBoxPanel" type="Panel" parent="DialogueBox"]
offset_left = 8.0
offset_right = 150.0
offset_bottom = 29.0
theme = ExtResource("5_8wxff")

[node name="DialogueTextbox" type="RichTextLabel" parent="DialogueBox/DialogueBoxPanel"]
layout_mode = 0
offset_left = -23.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 28.0
theme = ExtResource("5_8wxff")
scroll_active = false
script = ExtResource("6_bw1u3")

[node name="PortraitSprite" type="Sprite2D" parent="DialogueBox/DialogueBoxPanel"]
position = Vector2(86, -81)
texture = ExtResource("9_f427b")
centered = false

[node name="ScrollContainer" type="ScrollContainer" parent="DialogueBox/DialogueBoxPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -35.0
offset_right = 138.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i3s8v")
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueBox/DialogueBoxPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ReferenceButton" type="Button" parent="DialogueBox/DialogueBoxPanel"]
visible = false
layout_mode = 0
offset_right = 22.0
offset_bottom = 13.0
mouse_filter = 2
text = "greg"
flat = true
alignment = 0
script = ExtResource("8_cw2k1")

[node name="FinishedMarker" type="Sprite2D" parent="DialogueBox/DialogueBoxPanel"]
position = Vector2(137, 24)
texture = ExtResource("9_qnob4")
centered = false
region_enabled = true
region_rect = Rect2(16, 1, 3, 3)

[node name="DialogueSound" type="AudioStreamPlayer" parent="DialogueBox"]
bus = &"Speech"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 88.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemPanel" type="Panel" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 22.0

[node name="Sprite2D" type="Sprite2D" parent="ItemPanel"]
position = Vector2(2, 2)
texture = ExtResource("3_e0yq6")
centered = false

[node name="ItemInfoLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 84.0
offset_bottom = 88.0
bbcode_enabled = true
text = "mail man
===
2929 silver"
